--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ body.addEventListener('swipedown',function(e){
   });
   function makeNoise(text, speed)
   {
-    if(!navigator.onLine) {
+    if(navigator.onLine) {
       ggTTS(text,speed);
     } else {
       synTTS(text,speed);
@@ -143,7 +143,11 @@ body.addEventListener('swipedown',function(e){
     utterThis.lang = 'ja-JP';
     utterThis.pitch = 1;
     utterThis.rate = rate;
-    synth.speak(utterThis);
+    if (synth.speaking) {
+         synth.pause();
+    }
+        synth.speak(utterThis);
+
   }
   
   function newWord() {
