--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<style>
 	  body {
 	    width:100vw;
-		height:100vh;
+	    height:100vh;
 	    overflow:hidden;
+            background-color:black;
 	  }
 	  #b {
 		color:#111;
@@ -37,7 +38,7 @@
 		margin-top: 10vh;
 	  }
 	  h3 {
-		color: darkred;
+		color: orange;
         font-size: 40px;
         margin-top: 30vh;
 	  }
@@ -73,6 +74,8 @@
         border-radius: 5px;
         font-size:18px;
         z-index: 2;
+        background-color:black;
+        color:red;
       }
       .hidden {
         display: none;
@@ -175,10 +178,10 @@ body.addEventListener('swipedown',function(e){
   // Change type GG-Syn-TTS
   if(ggtts){
     synTTS('オフラインモード','1');
-    document.body.style.backgroundColor = 'black';
+    h3.style.color = 'darkred';
   } else {
     synTTS('オンラインモード','1');
-    document.body.style.backgroundColor = 'white';
+    h3.style.color = 'orange';
   }
   ggtts = !ggtts;
 });
