--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 	<style>
 	  body {
 	    width:100vw;
-	    height:100vh;
+	    max-height:100vh;
 	    overflow:hidden;
             background-color:black;
             color:#900C3F;
 	  }
 	  #b {
 		width:100vw;
-		height:100vh;
+		height:90vh;
 		height: 100%;
 		overflow: hidden;
 		display:block;
