--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 
 	<style>
 	  body {
-	    width:100vw;
+	    max-width:100vw;
 	    max-height:100vh;
 	    overflow:hidden;
             background-color:black;
             color:#900C3F;
 	  }
 	  #b {
-                height:90vh;
-		overflow: hidden;
+                height:80vh;
 		display:block;
 		align-content:center;
         text-align:center;
