--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no">
-	<title>MokuKa</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>Moku</title>
 
 	<style>
 	  body {
 	    max-width:100vw;
-	    max-height:100vh;
-	    overflow:hidden;
+	    max-height:90vh;
             background-color:black;
             color:#900C3F;
 	  }
