--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<style>
 	  body {
 	    max-width:100vw;
-	    max-height:90vh;
+	    max-height:90vh;overflow:hidden;
             background-color:black;
             color:#900C3F;
 	  }
