--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         font-size:18px;
         z-index: 2;
         background-color:black;
+        color:darkred;
       }
       .hidden {
         display: none;
