--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 	  body {
 	    max-width:100vw;
 	    max-height:90vh;overflow:hidden;
-            background-color:black;
-            color:#900C3F;
+        
 	  }
 	  #b {
                 height:80vh;
@@ -21,6 +20,8 @@
       * {
         box-sizing: border-box;
         outline: 0px solid transparent;
+        background-color:black !important; 
+        color:#900C3F !important;
       }
       a, h3, i{
         -webkit-user-select: none;
