--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	</style>
 </head>
 <body>
-  <audio src="" hidden></audio>
+  <audio src="" crossorigin="anonymous"></audio>
 
   <button id="w">
     <i>?</i>
